--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ background-color: black;
 background-repeat: no-repeat;
 background-size: cover;
 }
-@media screen and (max-width: 1280px){div.contentblock{width: 1200px;}}
-@media screen and (max-width: 1140px){div.contentblock{width: 1024px;}}
-@media screen and (max-width: 992px){div.contentblock{width: 970px;}}
+@media all and (max-width: 1280px){div.contentblock{width: 1200px;}}
+@media all and (max-width: 1140px){div.contentblock{width: 1024px;}}
+@media all and (max-width: 992px){div.contentblock{width: 970px;}}
 	::-webkit-scrollbar{
 		width: 15px;
 }
