--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@ background-color: black;
 background-repeat: no-repeat;
 background-size: cover;
 }
-@media all and (max-width: 1280px){div{width: 1200px;}}
-@media all and (max-width: 1140px){div{width: 1024px;}}
-@media all and (max-width: 992px){div{width: 970px;}}
 	::-webkit-scrollbar{
 		width: 15px;
 }
@@ -68,6 +65,11 @@ ul {
 li {
 	 list-style-type: none;
   float: none;
+}
+@media (max-width: 1200px){
+	body{padding: calc(20px+(50 - 20)*((100vw - 320px) / (1200 - 320));}
+		ul{font-size:calc(20px+(30 - 20)*((100vw - 320px) / (1200 - 320)) ;
+		margin-bottom:calc(10px+(20 - 10)*((100vw - 320px) / (1200 - 320));}
 }
 
 
