--- a/style.css
+++ b/style.css
@@ -47,10 +47,5 @@ margin-top: 2%;
 float: left;
 }
 li
-{color: white;margin-left: 40%;}ul {position: absolute;top: 50%;left: 50%;width: 900px;height: 900px;margin-top: -140px;margin-left: -800px;}#s {margin-top: -140px;margin-left: 50px;grid-area: s;}#k {margin-top: 200px;}
-#z {
-
-	margin-top: -4px;
-	margin-left: 5px;
-}li{list-style-type: none;float: none;}.container {padding: 0 15px;}@media (min-width: 575.98px){ .container {max-width: 540px;margin: auto;padding: 0; }}@media (min-width: 767.98px){.container {max-width: 720px;}}@media (min-width: 991.98px) {.container {max-width: 960px;}}@media (min-width: 900px){.container {max-width: 1450px;}}
+{color: white;margin-left: 40%;}ul {position: absolute;top: 50%;left: 50%;width: 900px;height: 900px;margin-top: -140px;margin-left: -800px;}#s {margin-top: -140px;margin-left: 50px;grid-area: s;}#k {margin-top: 200px;}#z {margin-top: -4px;margin-left: 5px;}li{list-style-type: none;float: none;}.container {padding: 0 15px;}@media (min-width: 575.98px){ .container {max-width: 540px;margin: auto;padding: 0; }}@media (min-width: 767.98px){.container {max-width: 720px;}}@media (min-width: 991.98px) {.container {max-width: 960px;}}@media (min-width: 900px){.container {max-width: 1450px;}}
 
