--- a/style.css
+++ b/style.css
@@ -5,11 +5,16 @@ body{
 nav{
 	background-color: black;
 	height: 40px;
-
+		border: solid;
+	border-color: white;
+border-width: 1px;
+}
+#n{
+	margin-top: 10px;
+	display: block;
 }
 content{
 	background-color:black ;
-
 	float:right;
 	width: 75%;
 	height: 650px;
@@ -25,12 +30,14 @@ height: 650px;
 	margin-left: 10px;}
 	#l{
 		float: right;
+		
 	}
 		#u{
 		margin-left: 250px;
+		margin-top: -7px;
 	}
 	#t{
-		margin-top: 190px;
+		margin-top: 180px;
 	}
 	ul,li {margin: 0;
 		padding: 0;
@@ -43,23 +50,19 @@ li{
 }
 a {
 	color: white;
-    background-color: black;
-    display: block;
+    background-color: none;
     font: bold 15px sans-serif;
     padding: 10px 10px;
     text-align: center;
     text-decoration: none;
-    border: solid;
-    border-color: white;
-    border-width: 1px;
 }
 @media all and (max-width: 1200px){
-	div{
+	body{
 		width: 960px;
 	}
 }
 @media all and (max-width: 480px){
-	div{
+	body{
 		width: 320px;
 	}
 }
