--- a/style.css
+++ b/style.css
@@ -1,69 +1,540 @@
-body{
-	width: auto;
-	background-color: black;
+body{width: 100%;
+	 margin: 0;
+background: black;
+display: flex;
+position: absolute;
+flex-direction: column;
 }
-nav{
-	background-color: black;
-	height: 40px;
-		border: solid;
-	border-color: white;
-border-width: 1px;
+.logo{
+	margin-left: 180px;
+max-width: 1500px;
+margin-top: 50px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
 }
-#n{
-	margin-top: 10px;
+.nav{
+	max-width: 1500px;
+	height: 80px;
+	display: flex;
+	flex-direction: row;
+	justify-content: right;
+	margin-top: 50px;
+	margin-right: 378px;
+}
+.nav-link{
+	color: white;
+	font-weight: bolder;
+	size: 24px;
+	font-family: Libre Franklin;
+	margin-left: 70px;
+	
+}
+header{background:url(img/housebg.png);
+		background-color:rgba(245, 214, 171, 1);
+	    background-size: 100%;
+	    opacity: 100%;
+	   max-width: 1500px;
+	    height: 768px;
+	    display: flex;
+	    flex-direction: column;
+	    }
+	    .head-bg{display: flex;
+	    	flex-direction: column;
+	    	background: rgba(198, 108, 73, 0.3);
+		max-width: 1500px;
+	height: 768px;
+	background-size: 100%;
+		}
+		.content5{
+	font-family: Libre Franklin;
+		justify-content: center;
+		font-style: normal;
+display: flex;
+flex-direction: column;
+margin-top: 80px;
+color: white;
+padding-left: 190px;
+line-height: 1px;
+		}
+		.m1{
+			font-weight: bolder;
+font-size: 64px;
+		}
+		.m2{
+			font-size: 24px;
+		}
+main{background: rgba(198, 108, 60, 0.3);
+	max-width: 1500px;
+	height: 100%;
+}
+.main-container{
+	display: flex;
+	flex-direction: column;
+}
+	.main-content1{
+max-width: 1500px;
+height: 544px;
+top: 768px;
+background: #FFFFFF;
+display: flex;
+flex-direction: column;
+	}
+	
+h1{font-family: Libre Franklin;
+	font-size: 24px;
+	color: white;
+}
+	h2,h3,h4,h6{padding-left: 166px;
+		padding-top: 60px;
+		padding-bottom: 70px;
+		font-family: Libre Franklin;
+		font-weight: 900;
+		font-size: 24px;
+		line-height: 29px;
+		height: 30px;}
+		h5
+		{padding-left: 166px;
+			position: absolute;
+		padding-top: 150px;
+		padding-bottom: 160px;
+		font-weight: bolder;
+		font-family: Libre Franklin;
+		font-weight: 700px;
+		font-size: 18px;
+		line-height: 29px;}
+	.content1{
+		justify-content: center;
+		font-family:Libre Franklin ;
+		font-size: 18px;
+		line-height: 30px;
+display: flex;
+flex-direction: column;
+max-width: 1107px;
+height: 231px;
+padding-left: 166px;
+padding-bottom: 110px;
+	}
+	@font-face {
+font-family: "Libre Franklin";  
+src: url("libre-franklin.ttf") format("truetype"); 
+font-style: normal; 
+font-weight: 400px;
+ }
+		.main-content2{
+max-width: 1500px;
+height: 693px;
+background:  #FFFAF2;
+display: flex;
+flex-direction: column;
+	}
+.content2{
+	font-family: Libre Franklin;
+		justify-content: space-between;
+		font-style: normal;
+			font-size: 18px;
+		line-height: 30px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+max-width: 1500px;
+height: 693px;
+
+}
+.stat{width: 700px;
+	height: 370px;
+justify-content: space-between;
+margin-right: 120px;
+display: flex;
+flex-direction: row;
+}
+.text{
+	width: 125px;
+	height: 370px;
+	line-height: 10px;
+	font-weight: bolder;
+	display: flex;
+	flex-direction: column;
+}
+.p{
+	margin-top: 43px;
+}
+.profile{margin-top: 30px;
+}
+.u{
+	font-weight: bold;
+}
+.ux{ 
+margin-top: 70px
+}
+.PB{
+	height: 370px;
+	width: 446px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+	.progressBar1{ 
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 15px;
+	width: 446px;
+height: 24px;}
+.barFont1{	display: flex;
+	flex-direction: row;
+	position: a;
+width: 381px;
+height: 24px;
+background: #C66C49;
+position: absolute;
+}
+.barBack1{
+	display: flex;
+	flex-direction: row;
+	position:a ;
+	width: 446px;
+height: 24px;
+background: #F5D6AB;
+} 
+
+.progressBar2{ display: flex;
+	flex-direction: row;
+	width: 446px;
+height: 24px; 
+margin-bottom: 11px;}
+.barFont2{
+	position: absolute;
+width: 351px;
+height: 24px;
+background: #C66C49
+}
+.barBack2{
+	display: flex;
+	flex-direction: row;
+	position: ;
+	width: 446px;
+height: 24px;
+background: #F5D6AB;
+}
+.progressBar3{ display: flex;
+	flex-direction: row;
+	width: 446px;
+height: 24px;
+margin-bottom:40px ; }
+.barFont3{position: absolute;
+width: 286px;
+height: 24px;
+background: #C66C49;
+}
+.barBack3{
+	width: 446px;
+height: 24px;
+background: #F5D6AB;
+}
+
+		.main-content3{
+max-width: 1500px;
+height: 822px;
+background: #FFFAFF;
+display: flex;
+	flex-direction:column;
+	}
+
+	.content3{
+	font-family: Libre Franklin;
+		justify-content: space-between;
+		font-style: normal;
+			font-size: 18px;
+		line-height: 30px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+max-width: 1500px;
+height: 522px;
+}
+.ptxt{
+	width: 400px;
+	margin-left: 166px;
+	font-weight: 400;
+}
+.i1{
+width: 350px;
+		height: 144px;
+margin: ;
+}
+.i2{
+
+	width: 252px;
+		height: 230px;
+margin-left:25px ;
+}
+.i3{
+width: 350px;
+		height: 233px;
+		left: 450px;
+		margin-top: 25px;
+}
+.i4{
+width: 255px;
+		height: 144px;
+margin-top: 25px;
+margin-left: 25px;
+}
+.images{display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 635px;
+	height: 403px;
+	margin-right: 150px;
+}
+	.img{
+		width: 350px;
+		height: 340px;
+		padding-left: 166px;
+	}
+footer{background-color: #FFFAF2;
+	max-width: 1500px;
+	height: 528px;
+	display: flex;
+	flex-direction:column;
+}
+.content4{margin-left: 166px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	font-family: Libre Franklin;
+	font-style: normal;
+	font-weight: 400;
+			font-size: 18px;
+		line-height: 35px;
+		justify-content: space-between;
+}
+.PL{
+display: flex;
+flex-direction: column;
+
+}
+.SN{
+display: flex;
+flex-direction: column;
+
+}
+.CT{
+display: flex;
+flex-direction: column;
+margin-right: 200px;
+}
+a{text-decoration: none;
+color: black;
+font-weight: bolder;
+position: relative;}
+@media screen and (max-width: 1300px){
+	header{
+		height: 200px;
+		background-repeat: no-repeat;
+	}
+	.head-bg{
+		background-repeat: no-repeat;
+		height: 600px;
+	}
+	.logo{flex-direction: row-reverse;
+	margin-left:0px;
+margin-top: 0px;
+}
+.nav{
+	height: 80px;
+	justify-content: left;
+	margin-top: 0px;
+	margin-right: 0px;
+}
+.nav-link{
+	color: white;
+	font-weight: bolder;
+	size: 24px;
+	font-family: Libre Franklin;
+	margin-left: 0px;
+	
+}
+.content5{
+margin-top: 19px;
+color: white;
+padding-left: 90px;
+line-height: 1px;
+}
+
+	.img{
+		padding-left: 13px;
+	}
+	.main-content2{
+		height:1000px ;}
+	.content2{
+		height:1000px ;}
+		.PB{
+
+		}
+		.main-content3{
+		height:1000px ;}
+	.content3{
+		height:1000px ;}
+		.ptxt{
+			margin-left: 12px;
+			width: 350px;
+		}
+		.images{
+	width: 350px;
+	height: 303px;
+	padding-left: 25px;
+}
+.i1{
+width: 169px;
+		height: 69px;
+		margin-left: 10px;
+}
+.i2{
+
+	width: 123px;
+		height: 116px;
+margin-left:10px ;
+}
+.i3{
+width: 169px;
+		height: 116px;
+		margin-top: 10px;
+		margin-left: 10px;
+}
+.i4{
+width: 123px;
+		height: 69px;
+margin-top: 10px;
+margin-left: 10px;
+}
+.content4{margin-left: 30px;
+}
+.PL{
+display: flex;
+flex-direction: column;
+
+}
+.SN{
+display: flex;
+flex-direction: column;
+margin-right: 80px;
+
+}
+h6{padding-left: 115px;}
+h3,h2{padding-left: 150px;}
+h4{font-size: 24px;}
+h5{font-size: 18px;}
+.content1{
+	width: 330px;
+	padding-left: 20px;
+	padding-top: 0px;
+	font-size: 12px;
+	line-height: 14px;
+}
+.m1{font-size: 20px;}
+.m2{margin-left: 19px;
+	font-size: 13px;}
+header{background:url(img/house.png);
+	size: portrait;
+	font-size: 12px;
+	height: 275px;}
+.head-bg{
+	height: 275px;
+}
+.content2{
+			font-size: 12px;
+		line-height: 25px;
+}
+.stat{width: 370px;
+	height: 370px;
+	margin-right: 0;
+	margin-left: 40px;
+	justify-content: normal;
+}
+.text{
+	font-weight: bolder;
+	width: 82px;
+	height: 370px;
+	line-height: 20px;
+}
+.PB{margin-left: 20px;
+	height: 366px;
+	width: 211px;
+}
+	.progressBar1{ 
+	margin-top: 17px;
+	width: 211px;
+height: 24px;}
+.barFont1{	
+width: 135px;
+height: 24px;
+}
+.barBack1{
+	width: 211px;
+height: 24px;
+} 
+
+.progressBar2{ 
+	width: 211px;
+height: 24px; 
+margin-bottom: 20px;}
+.barFont2{
+width: 165px;
+height: 24px;
+}
+.barBack2{
+	width: 211px;
+height: 24px;
+}
+.progressBar3{
+	width: 211px;
+height: 24px;
+margin-bottom:32px ; }
+.barFont3{
+width: 179px;
+height: 24px;
+}
+.barBack3{
+	width: 211px;
+height: 24px;
+}
+.p{
+	margin-top: 40px;
+	width: 211px;
+}
+.u{
+	margin-top: 30px;
+}
+h1{margin-right: 130px;}
+.drop{
+	background-color: white;
+	color: white;
+	margin-left: 0px;
+	padding-left: 50px;
+	padding-bottom: 50px;
+	border: none;
+	cursor: pointer;
+	background: url(img/hov.png);
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%px;
+}
+.nav{padding-left: 30px;
+	position: relative;
+display: inline-block;}
+.nav-link{
+	display: none;
+	min-width: 50px;
+	margin-top: 5px;
+	box-shadow: 0px 8px 16px 0px grba(0,0,0,0.2);
+	z-index: 1;
+}
+.nav-link a{
+	color:black ;
+	padding: 12px 16px;
+	text-decoration: none;
 	display: block;
 }
-content{
-	background-color:black ;
-	float:right;
-	width: 75%;
-	height: 650px;
-}
-#sidebar{ background-color: black;
-float: left; 
-width: 25%;
-height: 650px;
-}
-#z {
-
-	margin-top: 10px;
-	margin-left: 10px;}
-	#l{
-		float: right;
-		
-	}
-		#u{
-		margin-left: 195px;
-		margin-top: -7px;
-		display: block;
-	}
-	#t{
-		margin-top: 180px;
-	}
-	ul,li {margin: 0;
-		padding: 0;
-}
-ul{list-style: none;
-width: 100%;}
-li{
-	float: left;
-	width: auto;
-}
-a {
-	color: white;
-    background-color: none;
-    font: bold 15px sans-serif;
-    padding: 10px 10px;
-    text-align: center;
-    text-decoration: none;
-}
-@media all and (max-width: 1200px){
-	body{
-		width: 960px;
-	}
-}
-@media all and (max-width: 480px){
-	body{
-		width: 320px;
-	}
-}
+.nav-link a:hover {background-color: #F1F1F1F1;}
+.nav:hover .nav-link{display: block;}
