--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ display: flex;
 position: absolute;
 flex-direction: column;
 }
+.drop{display: none;}
 .logo{
 	margin-left: 180px;
 max-width: 1500px;
