--- a/style.css
+++ b/style.css
@@ -508,12 +508,12 @@ height: 24px;
 	margin-top: 30px;
 }
 h1{margin-right: 130px;}
-.drop{
+.drop{display: block;
 	background-color: white;
 	color: white;
 	margin-left: 0px;
 	padding-left: 50px;
-	padding-bottom: 50px;
+	padding-bottom: 20px;
 	border: none;
 	cursor: pointer;
 	background: url(img/hov.png);
@@ -522,6 +522,7 @@ h1{margin-right: 130px;}
 	width: 100%px;
 }
 .nav{padding-left: 30px;
+	padding-top: 30px;
 	position: relative;
 display: inline-block;}
 .nav-link{
