--- a/style.css
+++ b/style.css
@@ -539,4 +539,4 @@ display: inline-block;}
 	display: block;
 }
 .nav-link a:hover {background-color: #F1F1F1F1;}
-.nav:hover .nav-link{display: block;}
+	.nav:hover .nav-link{display: block;}}
