--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@ flex-direction: row;
 justify-content: space-between;
 }
 .nav{
+	font-size: 18px;
 	max-width: 1500px;
 	height: 80px;
 	display: flex;
 	flex-direction: row;
 	justify-content: right;
 	margin-top: 50px;
-	margin-right: 378px;
+	margin-right: 108px;
 }
 .nav-link{
 	color: white;
 	font-weight: bolder;
-	size: 24px;
 	font-family: Libre Franklin;
 	margin-left: 70px;
 	
@@ -36,7 +36,7 @@ header{background:url(img/housebg.png);
 	    background-size: 100%;
 	    opacity: 100%;
 	   max-width: 1500px;
-	    height: 768px;
+	    height: 718px;
 	    display: flex;
 	    flex-direction: column;
 	    }
@@ -53,9 +53,9 @@ header{background:url(img/housebg.png);
 		font-style: normal;
 display: flex;
 flex-direction: column;
-margin-top: 80px;
+margin-top: 100px;
 color: white;
-padding-left: 190px;
+padding-left: 140px;
 line-height: 1px;
 		}
 		.m1{
@@ -83,7 +83,8 @@ flex-direction: column;
 	}
 	
 h1{font-family: Libre Franklin;
-	font-size: 24px;
+	margin-top: 44px;
+	font-size: 30px;
 	color: white;
 }
 	h2,h3,h4,h6{padding-left: 166px;
@@ -184,7 +185,7 @@ height: 24px;}
 .barFont1{	display: flex;
 	flex-direction: row;
 	position: a;
-width: 381px;
+width: 430px;
 height: 24px;
 background: #C66C49;
 position: absolute;
@@ -205,7 +206,7 @@ height: 24px;
 margin-bottom: 11px;}
 .barFont2{
 	position: absolute;
-width: 351px;
+width: 51px;
 height: 24px;
 background: #C66C49
 }
@@ -223,7 +224,7 @@ background: #F5D6AB;
 height: 24px;
 margin-bottom:40px ; }
 .barFont3{position: absolute;
-width: 286px;
+width: 346px;
 height: 24px;
 background: #C66C49;
 }
@@ -288,7 +289,7 @@ margin-left: 25px;
 	height: 403px;
 	margin-right: 150px;
 }
-	.img{
+	.img{margin-top: 25px;
 		width: 350px;
 		height: 340px;
 		padding-left: 166px;
@@ -330,17 +331,10 @@ color: black;
 font-weight: bolder;
 position: relative;}
 @media screen and (max-width: 1300px){
-	header{
-		height: 200px;
-		background-repeat: no-repeat;
-	}
-	.head-bg{
-		background-repeat: no-repeat;
-		height: 600px;
-	}
 	.logo{flex-direction: row-reverse;
 	margin-left:0px;
 margin-top: 0px;
+height: 105px;
 }
 .nav{
 	height: 80px;
@@ -357,9 +351,9 @@ margin-top: 0px;
 	
 }
 .content5{
-margin-top: 19px;
+margin-top: 0px;
 color: white;
-padding-left: 90px;
+padding-left: 100px;
 line-height: 1px;
 }
 
@@ -378,7 +372,7 @@ line-height: 1px;
 	.content3{
 		height:1000px ;}
 		.ptxt{
-			margin-left: 12px;
+			margin-left: 15px;
 			width: 350px;
 		}
 		.images{
@@ -422,10 +416,15 @@ flex-direction: column;
 margin-right: 80px;
 
 }
-h6{padding-left: 115px;}
-h3,h2{padding-left: 150px;}
-h4{font-size: 24px;}
-h5{font-size: 18px;}
+.h6{height: 220px;}
+.h3{height: 160px;}
+h6{padding-left: 85px;}
+h2{padding-left: 125px;}
+h3{padding-left: 135px;}
+h4{font-size: 24px;
+padding-left: 120px;}
+h5{font-size: 18px;
+padding-left: 95px;}
 .content1{
 	width: 330px;
 	padding-left: 20px;
@@ -434,12 +433,14 @@ h5{font-size: 18px;}
 	line-height: 14px;
 }
 .m1{font-size: 20px;}
-.m2{margin-left: 19px;
+.m2{margin-left: 0px;
 	font-size: 13px;}
-header{background:url(img/house.png);
+header{background:url(img/housebg.png);
 	size: portrait;
 	font-size: 12px;
-	height: 275px;}
+	height: 180px;
+background-repeat: no-repeat;
+background-size: 100%;}
 .head-bg{
 	height: 275px;
 }
@@ -450,7 +451,7 @@ header{background:url(img/house.png);
 .stat{width: 370px;
 	height: 370px;
 	margin-right: 0;
-	margin-left: 40px;
+	margin-left: 30px;
 	justify-content: normal;
 }
 .text{
@@ -464,7 +465,7 @@ header{background:url(img/house.png);
 	width: 211px;
 }
 	.progressBar1{ 
-	margin-top: 17px;
+	margin-top: 16px;
 	width: 211px;
 height: 24px;}
 .barFont1{	
@@ -479,7 +480,7 @@ height: 24px;
 .progressBar2{ 
 	width: 211px;
 height: 24px; 
-margin-bottom: 20px;}
+margin-bottom: 15px;}
 .barFont2{
 width: 165px;
 height: 24px;
@@ -491,7 +492,7 @@ height: 24px;
 .progressBar3{
 	width: 211px;
 height: 24px;
-margin-bottom:32px ; }
+margin-bottom:36px ; }
 .barFont3{
 width: 179px;
 height: 24px;
@@ -501,13 +502,14 @@ height: 24px;
 height: 24px;
 }
 .p{
-	margin-top: 40px;
+	margin-top: 45px;
 	width: 211px;
 }
 .u{
-	margin-top: 30px;
+	margin-top: 29px;
 }
-h1{margin-right: 130px;}
+h1{margin-top: 3px;
+	margin-right: 110px;}
 .drop{display: block;
 	background-color: white;
 	color: white;
@@ -521,8 +523,8 @@ h1{margin-right: 130px;}
 	background-size: 50%;
 	width: 100%px;
 }
-.nav{padding-left: 30px;
-	padding-top: 30px;
+.nav{padding-left: 5px;
+	padding-top: 10px;
 	position: relative;
 display: inline-block;}
 .nav-link{
@@ -539,4 +541,4 @@ display: inline-block;}
 	display: block;
 }
 .nav-link a:hover {background-color: #F1F1F1F1;}
-	.nav:hover .nav-link{display: block;}}
+.nav:hover .nav-link{display: block;}}
